# swapi-project

./: .env_example  .gitignore  .pre-commit-config.yaml  Readme.md  docker-compose.yml  dockerfile  pyproject.toml
core/: settings.py  urls.py
data_explorer/: admin.py  apps.py  data_tools.py  forms.py  models.py  swapi.py  views.py
data_explorer/migrations/: 0001_initial.py
data_explorer/templates/: base.html  collections-view.html  counter-view.html  table-view.html
