[tool.poetry]
name = "swapi-project"
version = "0.1.0"
description = ""
authors = ["Aleksander Jagiełło <alek.jagiello@gmail.com>"]
readme = "README.md"
packages = [{include = "swapi_project"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
requests = "^2.28.2"
petl = "^1.7.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
