[tool.poetry]
name = "swapi-project"
version = "0.1.0"
description = ""
authors = ["Aleksander Jagiełło <alek.jagiello@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
requests = "^2.28.2"
petl = "^1.7.12"
psycopg2 = "^2.9.5"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.3"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
